--- a/client/src/app/products/product-list.component.html
+++ b/client/src/app/products/product-list.component.html
@@ -6,8 +6,7 @@
         <div class='row'>
             <div class='col-md-2'>Filter by:</div>
             <div class='col-md-4'>
-                <input [(ngModel)] = 'listFilter'
-                type='text' />
+                <input [(ngModel)] = 'listFilter' type='text' />
             </div>
         </div>
         <div class='row'>
